k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-analyze-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-analyze-server
  template:
    metadata:
      labels:
        app: stock-analyze-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: server
          image: choij17/stock-ai-analyze-server:0.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command:
            [
              "/usr/local/bin/uvicorn",
              "app.main:app",
              "--host",
              "0.0.0.0",
              "--port",
              "8000",
            ]
